feat: implement template generator
